--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -86,7 +86,7 @@
                 <a class="" href="recover-account">아이디/비밀번호가 생각나지 않으세요?</a>
             </div>
             <div class="text-center mb-3">
-                <a class="btn btn-block btn-outline-primary" href="/registUser" role="button">회원가입</a>
+                <a class="btn btn-block btn-outline-primary" href="/user/register" role="button">회원가입</a>
             </div>
 
             <!-- Divider -->
