--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -97,11 +97,11 @@
                 <div class="form-group col-md-6">
                     <label class="h6 small d-block text-uppercase" for="">상호</label>
                     <input type="text" class="form-control" id="" placeholder="코리아에그"
-                           th:field="*{name}"/>
+                           name="name"/>
                 </div>
                 <div class="form-group col-md-6">
                     <label class="h6 small d-block text-uppercase" for="shopTel">상점전화번호</label>
-                    <input type="tel" class="form-control" id="shopTel" placeholder="02-123-1234" th:field="*{tel}" />
+                    <input type="tel" class="form-control" id="shopTel" placeholder="02-123-1234" name="tel" />
                 </div>
             </div>
             <div class="form-row">
@@ -121,20 +121,20 @@
                     <div id="addrWrap" class="position-absolute" style="display:none; border:1px solid #d4d7dd; height:400px;">
                         <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnFoldWrap" style="cursor:pointer;position:absolute;right:0px;top:-1px;z-index:1" onclick="foldDaumPostcode()" alt="접기 버튼">
                     </div>
-                    <input id="addr" type="text" class="form-control form__input" th:field="*{address}"
+                    <input id="addr" type="text" class="form-control form__input" name="address"
                            placeholder="건물명,도로명,지번으로 검색하세요"
                            aria-label="Default example with button"
                            aria-describedby="inputGroup-sizing-default"
                     >
                     <input type="hidden" id="postNum" name="postNum">
-                    <input type="hidden" id="logitude" th:field="*{lon}">
-                    <input type="hidden" id="latitude" th:field="*{lat}">
+                    <input type="hidden" id="logitude" name="lon">
+                    <input type="hidden" id="latitude" name="lat">
                 </div>
                 <!--<input type="text" class="form-control" id="sample3_address" th:field="*{address}" />-->
             </div>
             <div class="form-group">
                 <label class="h6 small d-block text-uppercase" for="sample3_detailAddress">상세주소</label>
-                <input type="text" class="form-control" id="sample3_detailAddress" th:field="*{addressDetail}" />
+                <input type="text" class="form-control" id="sample3_detailAddress" name="addressDetail" />
             </div>
             <input type="submit" class="btn btn-primary" value="Sign in"/>
         </form>
