--- a/src/main/resources/templates/user/recover.html
+++ b/src/main/resources/templates/user/recover.html
@@ -11,6 +11,48 @@
             <div class="text-center mb-4">
                 <h1 class="h3 mb-0">아이디/비밀번호찾기</h1>
             </div>
+            <div> 아이디찾기
+                <div>
+                    <input type="tel" name="mobile"> <button class="btn btn-secondary">인증번호 전송</button>
+                    <span>000-0000로 인증번호가 전송되었습니다</span>
+                </div>
+                <div>
+                    <hr>
+                    <span>핸드폰으로 전송된 4자리 인증번호를 입력하세요</span>
+                    <input type="number" name="code"> <button class="btn btn-danger">인증완료</button>
+                </div>
+                <div>
+                    <span>인증이 완료되었습니다</span>
+                    <span>인증하신 정보와 일치하는 아이디 목록입니다</span>
+                    <span>ID</span> <span>2019년 가입</span>
+                </div>
+            </div>
+            <div> 비밀번호찾기
+                <div>
+                    <input type="text" name="id"> <button class="btn btn-primary">입력완료</button>
+                </div>
+                <div>
+                    <span>등록된 (010-4***-***2)핸드폰으로 인증을 요청합니다 </span><button class="btn btn-secondary">인증번호 전송</button>
+                    <span>000-0000로 인증번호가 전송되었습니다</span>
+                </div>
+                <div>
+                    <hr>
+                    <span>핸드폰으로 전송된 4자리 인증번호를 입력하세요</span>
+                    <input type="number" name="code"> <button class="btn btn-danger">인증완료</button>
+                </div>
+                <div>
+                    <span>인증이 완료되었습니다</span>
+                    <span>새로운 비밀번호를 입력해주세요</span>
+                    <input type="password">ID</input> <button>변경하기</button>
+                </div>
+                <div>
+                    <span>비밀번호 재설정이 완료되었습니다</span>
+                    <span>새로운 비밀번호를 사용하여 로그인 해주세요</span>
+                    <button>로그인하기</button>
+                </div>
+
+            </div>
+
 
             아이디찾기
             휴대폰 인증 < > [인증번호 전송]
