--- a/src/main/resources/templates/partner/product.html
+++ b/src/main/resources/templates/partner/product.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="user/myPageLayout"  >
+<head>
+    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+    <!-- default header name is X-CSRF-TOKEN -->
+    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <link  th:href="@{/vendor/cropper/css/cropper.css}" rel="stylesheet">
+
+    <link th:href="@{/vendor/textareaEditor/summernote-lite.css}" rel="stylesheet">
+
+
+    <style>
+        .label {
+            cursor: pointer;
+        }
+
+        .progress {
+            display: none;
+            margin-bottom: 1rem;
+        }
+
+        .alert {
+            display: none;
+        }
+
+        .img-container img {
+            max-width: 100%;
+        }
+    </style>
+</head>
 
 <section layout:fragment="mainContent">
     <!-- ========== MAIN CONTENT ========== -->
     <!-- Hire Us Form -->
     <div class="container space-2 space-3--lg">
+
+        <h1>Upload cropped image to server</h1>
+        <label class="label" data-toggle="tooltip" title="Change your avatar">
+            <img class="rounded" id="avatar" src="https://avatars0.githubusercontent.com/u/3456749?s=160" alt="avatar">
+            <input type="file" class="sr-only" id="input" name="image" accept="image/*">
+        </label>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+        </div>
+        <div class="alert" role="alert"></div>
+
+        <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalLabel">Crop the image</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="img-container">
+                            <img id="image" src="https://avatars0.githubusercontent.com/u/3456749">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="crop">Crop</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
         <form th:action="@{register}" method="post"
               class="js-validate w-lg-75 px-3 px-sm-9 mx-lg-auto form-signin"
               th:object="${product}">
@@ -18,6 +83,8 @@
                 <h1 class="h3">상품등록</h1>
                 <p></p>
             </div>
+
+
             <!-- End Title -->
             <div class="form-row">
                 <div class="form-group col-md-5 js-form-message">
@@ -74,15 +141,10 @@
                 </div>
             </div>
             <div class="form-row mb-5">
-                <div class="form-group col-md-6 js-form-message">
+                <div class="form-group js-form-message">
                     <label class="h6 small d-block text-uppercase">상세설명<span class="text-danger">*</span></label>
                     <div class="js-focus-state input-group form">
-                        <input type="number" class="form-control form__input" required
-                               th:field="*{contents}"
-                               aria-label="username"
-                               data-msg="필수입력"
-                               data-error-class="u-has-error"
-                               data-success-class="u-has-success"/>
+                        <textarea id="summernote" name="contents"></textarea>
                     </div>
                 </div>
             </div>
@@ -90,13 +152,137 @@
         </form>
     </div>
 
-    <script th:inline="javascript" type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
-    <script th:inline="javascript" type="text/javascript" src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script>
+    <script th:src="@{/vendor/cropper/js/cropper.js}"></script>
+    <script th:src="@{/vendor/textareaEditor/summernote-lite.js}"></script>
+    <script th:src="@{/vendor/textareaEditor/lang/summernote-ko-KR.js}"></script>
     <script th:inline="javascript">
         /*<![CDATA[*/
+        window.addEventListener('DOMContentLoaded', function () {
+            var avatar = document.getElementById('avatar');
+            var image = document.getElementById('image');
+            var input = document.getElementById('input');
+            var $progress = $('.progress');
+            var $progressBar = $('.progress-bar');
+            var $alert = $('.alert');
+            var $modal = $('#modal');
+            var cropper;
+
+            $('[data-toggle="tooltip"]').tooltip();
+
+            input.addEventListener('change', function (e) {
+                var files = e.target.files;
+                var done = function (url) {
+                    input.value = '';
+                    image.src = url;
+                    $alert.hide();
+                    $modal.modal('show');
+                };
+                var reader;
+                var file;
+                var url;
+
+                if (files && files.length > 0) {
+                    file = files[0];
+
+                    if (URL) {
+                        done(URL.createObjectURL(file));
+                    } else if (FileReader) {
+                        reader = new FileReader();
+                        reader.onload = function (e) {
+                            done(reader.result);
+                        };
+                        reader.readAsDataURL(file);
+                    }
+                }
+            });
+
+            $modal.on('shown.bs.modal', function () {
+                cropper = new Cropper(image, {
+                    aspectRatio: 1,
+                    viewMode: 3,
+                });
+            }).on('hidden.bs.modal', function () {
+                cropper.destroy();
+                cropper = null;
+            });
+
+            document.getElementById('crop').addEventListener('click', function () {
+                var initialAvatarURL;
+                var canvas;
+
+                $modal.modal('hide');
+
+                if (cropper) {
+                    canvas = cropper.getCroppedCanvas({
+                        width: 400,
+                        height: 400,
+                    });
+                    initialAvatarURL = avatar.src;
+                    avatar.src = canvas.toDataURL();
+                    $progress.show();
+                    $alert.removeClass('alert-success alert-warning');
+                    canvas.toBlob(function (blob) {
+                        var formData = new FormData();
+
+                        var token = $("meta[name='_csrf']").attr("content");
+                        var header = $("meta[name='_csrf_header']").attr("content");
+                        $(document).ajaxSend(function(e, xhr, options) {
+                            xhr.setRequestHeader(header, token);
+                        });
+
+                        formData.append('avatar', blob, 'avatar.jpg');
+                        $.ajax('/file/upload', {
+                            method: 'POST',
+                            data: formData,
+                            processData: false,
+                            contentType: false,
+
+                            xhr: function () {
+                                var xhr = new XMLHttpRequest();
+
+                                xhr.upload.onprogress = function (e) {
+                                    var percent = '0';
+                                    var percentage = '0%';
+
+                                    if (e.lengthComputable) {
+                                        percent = Math.round((e.loaded / e.total) * 100);
+                                        percentage = percent + '%';
+                                        $progressBar.width(percentage).attr('aria-valuenow', percent).text(percentage);
+                                    }
+                                };
+
+                                return xhr;
+                            },
+
+                            success: function (val) {
+                                $alert.show().addClass('alert-success').text('Upload success'+ val);
+                            },
+
+                            error: function () {
+                                avatar.src = initialAvatarURL;
+                                $alert.show().addClass('alert-warning').text('Upload error');
+                            },
+
+                            complete: function () {
+                                $progress.hide();
+                            },
+                        });
+                    });
+                }
+            });
+        });
+
+
         $(document).on('ready', function () {
             // initialization of form validation
             $.HSCore.components.HSValidation.init('.js-validate');
+        });
+
+        $('#summernote').summernote({
+            lang: 'ko-KR',
+            placeholder: 'Hello stand alone ui',
+            tabsize: 2,
+            height: 300
         });
 
         /*]]>*/
