--- a/src/main/resources/templates/user/myPageLayout.html
+++ b/src/main/resources/templates/user/myPageLayout.html
@@ -11,7 +11,7 @@
                 <!--<p class="text-white">마이페이지</p>-->
             </div>
             <a class="btn btn-sm btn-primary btn-wide" th:href="@{/myPage}">기본정보</a>
-            <a class="btn btn-sm btn-dark btn-wide" th:href="@{/myPage/order/list}">주문내역</a>
+            <a class="btn btn-sm btn-dark btn-wide" th:href="@{/order/list}">주문내역</a>
             <a class="btn btn-sm btn-primary btn-wide" th:href="@{/partner/product/list}">상품</a>
         </div>
         <!-- End Hero Section -->
