--- a/src/main/resources/static/css/theme.css
+++ b/src/main/resources/static/css/theme.css
@@ -62,7 +62,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  /*font-family: Dotum,'돋움',Helvetica,"Apple SD Gothic Neo",sans-serif;*/
+  font-family: '굴림', gulim, helvetica, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.7;
