--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -11,6 +11,9 @@
         <!-- Required Meta Tags Always Come First -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!--ajax csrf -->
+        <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+        <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 
         <!-- Favicon -->
         <link rel="shortcut icon" th:href="@{/favicon.ico}">
@@ -104,6 +107,12 @@
 
                 $navBar.on('hide.bs.collapse', function () {
                     $('.js-scrollbar-header').mCustomScrollbar("destroy");
+                });
+
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+                $(document).ajaxSend(function(e, xhr, options) {
+                    xhr.setRequestHeader(header, token);
                 });
             });
         </script>
