--- a/src/main/resources/templates/admin/contact.html
+++ b/src/main/resources/templates/admin/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{/admin/adminDefault}" >
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="admin/adminDefault" >
 <section layout:fragment="content">
 
     <div class="container space-2 space-3--lg">
